--- a/EbonieLumpkinPortfolio.html
+++ b/EbonieLumpkinPortfolio.html
@@ -56,7 +56,7 @@
         </main>
         <footer>
             <p>
-             ©Copyright 2018 by Ebonie Lumpkin. All rights reversed.
+             ©Copyright 2018 by Ebonie Lumpkin. All rights reserved.
             </p>
         </footer>
     </body>
